# GLFW_StarterProject

./: CMakeLists.txt  README.md
src/: main.cpp
